# Randomuser-Data-Pipeline

./: Project_Initialize.sh  Project_Start.sh  Project_Stop.sh  Readme.md  docker-compose.yml  pyproject.toml  requirements.txt
Administrator_Scripts/: Container_Start.sh  Container_Stop.sh  Cron_Add.sh  Crone_Remove.sh  Log.sh  Topics_Start.sh  Topics_Stop.sh
Database/: Backup.sh
Database_Init/: Database.sql
Python_Files/: 0-Get_Data.py  1-Add_Timestamp.py  2-Add_Label.py  3-Add_Database.py  Kafka_HealthCheck.py  Logger.py  Noco.py  Noco_Create_Base.py  Noco_Create_Table.py
